--- a/Exercise-4/Index.html
+++ b/Exercise-4/Index.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/slider.css">
+   <link rel="stylesheet" href="./asset/css/style.css">
 
     <title>Exercise-4 || JSDC-B18</title></title>
 
